templates/kserve-inference_template.yaml
---
# Source: kserve-inference/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kserve-inference-release-name-predictor
  labels:
    app: kserve-inference
    chart: kserve-inference-0.4.9
    release: release-name
spec:
  podSelector:
    matchLabels:
      app-wmf: kserve-inference
      chart: kserve-inference-0.4.9
      release: release-name
      component: predictor
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
      - port: 8012
        protocol: TCP
      # The Knative Autoscaler pod fetches data from the queue-proxy
      # Prometheus endpoint.
      - port: 9090
        protocol: TCP
      # The queue-proxy exposes metrics about Knative revision traffic
      # handled (HTTP return codes etc..)
      - port: 9091
        protocol: TCP
      # The Istio sidecar exposes metrics about traffic on a certain port.
      - port: 15020
        protocol: TCP
---
# Source: kserve-inference/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kserve-inference-release-name-transformer
  labels:
    app: kserve-inference
    chart: kserve-inference-0.4.9
    release: release-name
spec:
  podSelector:
    matchLabels:
      app-wmf: kserve-inference
      chart: kserve-inference-0.4.9
      release: release-name
      component: transformer
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: 8080
        protocol: TCP
      - port: 8012
        protocol: TCP
      # The Knative Autoscaler pod fetches data from the queue-proxy
      # Prometheus endpoint.
      - port: 9090
        protocol: TCP
      # The queue-proxy exposes metrics about Knative revision traffic
      # handled (HTTP return codes etc..)
      - port: 9091
        protocol: TCP
      # The Istio sidecar exposes metrics about traffic on a certain port.
      - port: 15020
        protocol: TCP
